<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/ac_code_bg"
        android:orientation="horizontal">

        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="25" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="524"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="160"
                android:gravity="center"
                android:orientation="vertical">

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="40" />

                <com.microbookcase.view.ArrowTextView
                    android:id="@+id/code_list_back"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginLeft="30dp"
                    android:layout_marginRight="30dp"
                    android:layout_weight="107"
                    android:gravity="center"
                    android:text="操作步骤"
                    android:textColor="#2F2DD6"
                    android:textSize="25sp"
                    android:textStyle="bold" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="15" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="533"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="120"
                    android:background="@drawable/code_list_bg"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/code_step_one"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:text="@string/code_step_one"
                        android:textColor="#49F0FB"
                        android:textSize="20sp" />

                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="40" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="210"
                    android:background="@drawable/code_list_bg"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:padding="10dp">

                    <TextView
                        android:id="@+id/code_step_two"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:text="@string/code_step_two"
                        android:textColor="#49F0FB"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/code_step_two_one"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="@string/code_step_two_one"
                        android:textColor="#ffffff"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/code_step_two_two"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="@string/code_step_two_two"
                        android:textColor="#ffffff"
                        android:textSize="20sp" />

                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="40" />


                <TextView
                    android:id="@+id/code_step_three"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="120"
                    android:background="@drawable/code_list_bg"
                    android:gravity="center"
                    android:text="@string/code_step_three"
                    android:textColor="#49F0FB"
                    android:textSize="20sp" />


            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="70"></View>

        </LinearLayout>

        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="25" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="420"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="160"
                android:gravity="center"
                android:orientation="vertical">

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="40" />

                <com.microbookcase.view.ArrowTextView
                    android:id="@+id/code_list_title"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginLeft="30dp"
                    android:layout_marginRight="30dp"
                    android:layout_weight="107"
                    android:gravity="center"
                    android:text="借还书列表"
                    android:textColor="#2F2DD6"
                    android:textSize="25sp"
                    android:textStyle="bold" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="15" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="533"
                android:background="@drawable/code_list_bg">

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/code_list_recy"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"></android.support.v7.widget.RecyclerView>

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="70"></View>

        </LinearLayout>

        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="25" />

    </LinearLayout>

    <TextView
        android:id="@+id/code_list_down"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:padding="10dp"
        android:text="倒计时30秒"
        android:textColor="#FFFFFF" />

</RelativeLayout>